@@ -166,9 +166,10 @@
 
 .SCHeaderRowDoubleButton 
 {
-	float: right;
-	width: 4.5%;
-	margin-right: 1em;
+	padding: 0 0.2em;
+	position: absolute;
+	right: 2em;
+	width: 60px;
 }
 
 .SCHeaderRowSingleButton 
@@ -404,7 +405,7 @@
 	color: white;
 }
 
-.accountPageText 
+.basicPageText 
 {
 	margin: 0.25em 0.5em;
 }
