@@ -6,7 +6,8 @@ body
 
 html, body 
 {
-    max-width: 100%;
+    max-width: 100vw;
+    min-width: 40em;
     overflow-x: hidden;
     height: 100vh;
 }
